package com.orderbook.entity;

public enum OrderSide {
    BUY,
    SELL
}
